# qa_guru_diploma

./: .env.personal_data.example  .env.test_data  .gitignore  README.md  pyproject.toml  pytest.ini  readme.md
helper/: api_get_user_following.py  attach_helpers.py  get_api_sig.py  get_env_path.py  get_sk.py  load_json_schema.py
helper/api_helpers/: api_get_user_following.py  check_following_list.py  custom_session.py  get_api_sk.py  get_api_token.py  load_json_schema.py
helper/mobile_helper/: get_mobile_login.py
helper/web_helpers/: get_web_log_in.py
pages/: home_page.py  login_page.py
pages/mobile_pages/: mobile_chart_page.py  mobile_login_page.py  mobile_user_menu.py
pages/web_pages/: following_page.py  home_page.py  login_page.py  playlists_page.py  search_results_page.py  user_page.py
schemas/: get_artists.json  get_tracks.json  get_users_favourite_tracks.json  post_create_session.json
tests/api/: conftest.py  test_api_login.py  test_api_search.py  test_api_tracks_actions.py  test_user_auth.py  test_users_actions.py
tests/mobile/: .env.mobile.browserstack.example  .env.mobile.local.example  config.py  conftest.py  test_auth.py  test_logout.py  test_mobile_chart_statistics.py  test_mobile_login.py  test_mobile_logout.py  test_see_chart_statistics.py
tests/web/: conftest.py  test_actions_with_users.py  test_authorization.py  test_search.py  test_ui_following.py  test_ui_login.py  test_ui_logout.py  test_ui_open_favourite_tracks.py  test_ui_search.py
